--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "babel-preset-next": "^1.4.0",
     "emailjs-com": "^3.2.0",
     "next": "11.1.2",
